# time-signal

./: .gitignore  Cargo.toml  LICENSE  LICENSES.html  LICENSES.md  README.md  about.hbs  about.toml  build.rs  no-terminal.ps1  tray-icon.rc
.github/workflows/: licenses.yml  rust.yml
src/: main.rs  voicevox.rs
src/platform/: default.rs  macos.rs  mod.rs
src/platform/icon/: mod.rs  unix.rs  windows.rs
