[package]
name = "time-signal"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.1"
license = "Apache-2.0 OR MIT"

[dependencies]
cron_tab = { version = "0.2", features = ["sync"] }
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
anyhow = "1.0.98"
semver = "1.0.26"
clap = { version = "4.5.43", features = ["derive"] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
zip = "4.3.0"
rodio = "0.21.1"
indicatif = "0.18.0"
regex = "1.11.1"

[profile.release]
strip = true
lto = true
