[package]
name = "time-signal"
version = "0.2.2"
edition = "2024"
rust-version = "1.85.1"
license = "Apache-2.0 OR MIT"

[dependencies]
cron_tab = { version = "0.2", features = ["sync"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
semver = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "5.1"
rodio = "0.21"
indicatif = "0.18"
regex = "1.11"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-item = "0.10.0"
user-idle = { version = "0.6", default-features = false }

[target.'cfg(not(target_os = "windows"))'.dependencies]
png = "0.18.0"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }
user-idle = { version = "0.6", default-features = false, features = ["dbus"] }


[build-dependencies]
embed-resource = "3.0.5"

[profile.release]
strip = true
lto = true
